--- a/p8105_hw2_zc2556.md
+++ b/p8105_hw2_zc2556.md
@@ -11,14 +11,14 @@ Zhe Chen
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ---- tidyverse 1.3.0 --
+    ## -- Attaching packages ------------------------------------------------------- tidyverse 1.3.0 --
 
     ## √ ggplot2 3.3.2     √ purrr   0.3.4
     ## √ tibble  3.0.3     √ dplyr   1.0.2
     ## √ tidyr   1.1.2     √ stringr 1.4.0
     ## √ readr   1.3.1     √ forcats 0.5.0
 
-    ## -- Conflicts ------- tidyverse_conflicts() --
+    ## -- Conflicts ---------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -26,7 +26,7 @@ library(tidyverse)
 library(readxl)
 ```
 
-### Import data:
+### Import data
 
 ``` r
 trashwheel =
@@ -37,31 +37,6 @@ mutate(
     sports_balls = as.integer(sports_balls)
   )
 ```
-
-    ## Warning in FUN(X[[i]], ...): strings not representable in native encoding will
-    ## be translated to UTF-8
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00C4>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00D6>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00E4>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00F6>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00DF>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00C6>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00E6>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00D8>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00F8>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00C5>' to native encoding
-
-    ## Warning in FUN(X[[i]], ...): unable to translate '<U+00E5>' to native encoding
 
 ### Data of Precipitation for 2018
 
@@ -119,3 +94,82 @@ this dataset:
 
   - The median number of sports balls found in a dumpster in 2017 was 8
   - The total precipitation in 2018 was 70.33 inches.
+
+## Problem 2
+
+### Import and Clean the Data
+
+``` r
+# import and initial cleaning
+NYC_Transit =
+  read_csv("./NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  janitor::clean_names() %>% #clean the name
+  select(line, name = station_name, route1:route11, station_latitude, station_longitude, entrance_type , entry, vending, ada) %>% #select meaningful variables
+   mutate_at(vars(route1:route11), funs(as.character)) #convert to character for further cleaning
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   `Station Latitude` = col_double(),
+    ##   `Station Longitude` = col_double(),
+    ##   Route8 = col_double(),
+    ##   Route9 = col_double(),
+    ##   Route10 = col_double(),
+    ##   Route11 = col_double(),
+    ##   ADA = col_logical(),
+    ##   `Free Crossover` = col_logical(),
+    ##   `Entrance Latitude` = col_double(),
+    ##   `Entrance Longitude` = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+``` r
+# make the data more tidy
+NYC_Transit_tidy = 
+  NYC_Transit %>%
+  # merging variables to a single variable
+  pivot_longer( 
+      route1:route11,
+      names_to = "routes",
+      values_to = "routes served",
+      names_prefix = "route"
+    ) %>%
+  drop_na("routes served") # abandon observations with missing values
+NYC_Transit$entry = ifelse(NYC_Transit$entry == "YES", TRUE, FALSE) # convert entry to logical type
+head(NYC_Transit_tidy) 
+```
+
+    ## # A tibble: 6 x 10
+    ##   line  name  station_latitude station_longitu~ entrance_type entry vending
+    ##   <chr> <chr>            <dbl>            <dbl> <chr>         <chr> <chr>  
+    ## 1 4 Av~ 25th~             40.7            -74.0 Stair         YES   YES    
+    ## 2 4 Av~ 25th~             40.7            -74.0 Stair         YES   YES    
+    ## 3 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
+    ## 4 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
+    ## 5 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
+    ## 6 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
+    ## # ... with 3 more variables: ada <lgl>, routes <chr>, `routes served` <chr>
+
+Above is the first 10 lines from the data set some cleaning. Our data
+set, NYC\_Transit, contains the information about entrance, exit for
+each subway in NYC. We cleaned the data set in several steps:
+
+  - make the variable name to a uniform format;
+  - keep variables that are useful(line, station name, routes, the
+    latitude and the longitude of the station, entrance type, entry,
+    vending, ADA), and rename some variables;
+  - merge “route” variables into one variable “route” with variable
+    “route served” which contains the transfer information and take
+    off observations with missing values in “route served” variable;
+  - convert entry’s data type to logical.
+
+After cleaning, we have a more tidy data set with dimension of 35492.
+This data set is pretty tidy now.
+
+### Reformat the data
+
+``` r
+#
+```
