--- a/p8105_hw2_zc2556.md
+++ b/p8105_hw2_zc2556.md
@@ -1,4 +1,4 @@
-P8105-HW2
+P8105-HW2-zc2556
 ================
 Zhe Chen
 2020/9/28
@@ -132,25 +132,26 @@ NYC_Transit_tidy =
   # merging variables to a single variable
   pivot_longer( 
       route1:route11,
-      names_to = "routes",
-      values_to = "routes served",
+      names_to = "routes number",
+      values_to = "routes name",
       names_prefix = "route"
     ) %>%
-  drop_na("routes served") # abandon observations with missing values
-NYC_Transit$entry = ifelse(NYC_Transit$entry == "YES", TRUE, FALSE) # convert entry to logical type
+  drop_na("routes name") # abandon observations with missing values
+NYC_Transit_tidy$entry = ifelse(NYC_Transit_tidy$entry == "YES", TRUE, FALSE) # convert entry to logical type
 head(NYC_Transit_tidy) 
 ```
 
     ## # A tibble: 6 x 10
     ##   line  name  station_latitude station_longitu~ entrance_type entry vending
-    ##   <chr> <chr>            <dbl>            <dbl> <chr>         <chr> <chr>  
-    ## 1 4 Av~ 25th~             40.7            -74.0 Stair         YES   YES    
-    ## 2 4 Av~ 25th~             40.7            -74.0 Stair         YES   YES    
-    ## 3 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
-    ## 4 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
-    ## 5 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
-    ## 6 4 Av~ 36th~             40.7            -74.0 Stair         YES   YES    
-    ## # ... with 3 more variables: ada <lgl>, routes <chr>, `routes served` <chr>
+    ##   <chr> <chr>            <dbl>            <dbl> <chr>         <lgl> <chr>  
+    ## 1 4 Av~ 25th~             40.7            -74.0 Stair         TRUE  YES    
+    ## 2 4 Av~ 25th~             40.7            -74.0 Stair         TRUE  YES    
+    ## 3 4 Av~ 36th~             40.7            -74.0 Stair         TRUE  YES    
+    ## 4 4 Av~ 36th~             40.7            -74.0 Stair         TRUE  YES    
+    ## 5 4 Av~ 36th~             40.7            -74.0 Stair         TRUE  YES    
+    ## 6 4 Av~ 36th~             40.7            -74.0 Stair         TRUE  YES    
+    ## # ... with 3 more variables: ada <lgl>, `routes number` <chr>, `routes
+    ## #   name` <chr>
 
 Above is the first 10 lines from the data set some cleaning. Our data
 set, NYC\_Transit, contains the information about entrance, exit for
@@ -165,11 +166,238 @@ each subway in NYC. We cleaned the data set in several steps:
     off observations with missing values in “route served” variable;
   - convert entry’s data type to logical.
 
-After cleaning, we have a more tidy data set with dimension of 35492.
-This data set is pretty tidy now.
+After cleaning with pivot\_longer, we have a more tidy data set with
+dimension of 4270X10. This data set is pretty tidy now.
 
-### Reformat the data
+### Answer Questions and Reformat the Data
 
 ``` r
-#
+# find how many distinct stations
+num_dis_stat = 
+  NYC_Transit_tidy %>%
+  distinct(line, name ) %>%
+  nrow()
+num_dis_stat
 ```
+
+    ## [1] 465
+
+``` r
+# find how many stations are ADA compliant
+num_ADA_comp = 
+  NYC_Transit_tidy %>% 
+  filter(ada == 1) %>%
+  distinct(line, name) %>%
+  nrow()
+num_ADA_comp
+```
+
+    ## [1] 84
+
+``` r
+# entrances which allow entering but have no vending
+num_nvend_enter_entrances = 
+  NYC_Transit %>% filter((entry == 'YES')& (vending == 'NO')) %>%
+  nrow()
+num_no_vending = 
+  NYC_Transit %>% filter(vending == 'NO') %>%
+  nrow()
+num_nvend_enter_entrances
+```
+
+    ## [1] 69
+
+``` r
+num_no_vending
+```
+
+    ## [1] 183
+
+``` r
+prop = num_nvend_enter_entrances/num_no_vending
+prop
+```
+
+    ## [1] 0.3770492
+
+We have 465 distinct stations; 84 stations with ADA compliance; lastly,
+we have the proportion of 0.3770492.
+
+``` r
+# reformat the data by making route number and name distinctive
+
+# number of distinct stations which serve A train
+num_A =
+  NYC_Transit_tidy %>%
+  filter(`routes name` == 'A')%>%
+  distinct(line, name) %>%
+  nrow()
+num_A
+```
+
+    ## [1] 60
+
+``` r
+# among them who are ADA compliant
+num_A_ADA =
+  NYC_Transit_tidy %>%
+  filter(`routes name` == 'A')%>%
+  filter(ada == TRUE) %>%
+  distinct(line, name) %>%
+  nrow()
+num_A_ADA
+```
+
+    ## [1] 17
+
+We have made the line number and line name variables pivot while
+cleaning the data. We have 60 of stations which serve A train, and 17 of
+them are ADA compliant.
+
+## Problem 3
+
+### Import, import and import.
+
+``` r
+# Import and clean pols_month.csv
+pols_month =
+  read_csv("./fivethirtyeight_datasets/pols-month.csv") %>% 
+  janitor::clean_names() %>% #clean the name
+  separate(mon, c("year", "month", "day")) %>%
+  mutate(
+    month = month.abb[as.numeric(month)] #change month number to month names
+    ) %>%
+  mutate(
+    prez_gop = ifelse(prez_gop == 0, 0, 1), #we have "2" in our dataset, and replace them to "1"
+    president = prez_gop + prez_dem
+  ) %>%
+  select(
+    -prez_dem, -prez_gop, -day
+  )
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   mon = col_date(format = ""),
+    ##   prez_gop = col_double(),
+    ##   gov_gop = col_double(),
+    ##   sen_gop = col_double(),
+    ##   rep_gop = col_double(),
+    ##   prez_dem = col_double(),
+    ##   gov_dem = col_double(),
+    ##   sen_dem = col_double(),
+    ##   rep_dem = col_double()
+    ## )
+
+We import the data set “pols\_month.csv”. Since we have “2”s in column
+prez\_gop, and, after checking with WIKI, the U.S president for that
+period is Ford, who is a republican, we replaced the “2” to “1” (1 for
+yes). We have variables containing the president, number of governors,
+senators and representatives in both parties, year and month. It’s
+dimension is 822X9; year range is 1947, 2015; the key variables are year
+and month, meaning that we can identify any observations with a combined
+year and month.
+
+``` r
+#Import and clean snp.csv
+snp =
+  read_csv("./fivethirtyeight_datasets/snp.csv") %>% 
+  janitor::clean_names() %>% #clean the name
+  separate(date, c("month", "day", "year")) %>%
+  mutate(
+    month = month.abb[as.numeric(month)] #change month number to month names
+  ) %>%
+  select(-day) %>%
+  relocate(year, month)
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   date = col_character(),
+    ##   close = col_double()
+    ## )
+
+Similarly, we import and clean the “snp.csv”, making it consistent to
+the pols\_month data. We have variables containing the date (year and
+month) and closing value of the stock. It’s dimension is 787X3; year
+range is 1950, 2015; the key variables are year and month, meaning that
+we can identify any observations with a combined year and month.
+
+``` r
+#Import and clean unemployment.csv
+unemployment =
+  read_csv("./fivethirtyeight_datasets/unemployment.csv") %>% 
+  janitor::clean_names() %>% #clean the name
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "unemployment_rate"
+  ) #make it consistent with other two data sets
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_double(),
+    ##   Jan = col_double(),
+    ##   Feb = col_double(),
+    ##   Mar = col_double(),
+    ##   Apr = col_double(),
+    ##   May = col_double(),
+    ##   Jun = col_double(),
+    ##   Jul = col_double(),
+    ##   Aug = col_double(),
+    ##   Sep = col_double(),
+    ##   Oct = col_double(),
+    ##   Nov = col_double(),
+    ##   Dec = col_double()
+    ## )
+
+We import the “unemployment.csv” and reformat it, consistent with the
+other data sets. We have variables containing the date (year and month)
+and unemployment rate at that year and month. It’s dimension is 816X3;
+year range is 1950, 2015; the key variables are year and month, meaning
+that we can identify any observations with a combined year and month.
+
+### Join and Merge
+
+Finally, we have 3 data sets with the same key variables (year and
+month), and we now can join them and make one big data set.
+
+``` r
+snp$year = as.character(snp$year)
+unemployment$year = as.character(unemployment$year)
+final_ds =
+  left_join(pols_month, snp)
+```
+
+    ## Joining, by = c("year", "month")
+
+``` r
+final_ds = 
+  left_join(final_ds, unemployment)
+```
+
+    ## Joining, by = c("year", "month")
+
+``` r
+head(final_ds)
+```
+
+    ## # A tibble: 6 x 11
+    ##   year  month gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president close
+    ##   <chr> <chr>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>     <dbl> <dbl>
+    ## 1 1947  Jan        23      51     253      23      45     198         1    NA
+    ## 2 1947  Feb        23      51     253      23      45     198         1    NA
+    ## 3 1947  Mar        23      51     253      23      45     198         1    NA
+    ## 4 1947  Apr        23      51     253      23      45     198         1    NA
+    ## 5 1947  May        23      51     253      23      45     198         1    NA
+    ## 6 1947  Jun        23      51     253      23      45     198         1    NA
+    ## # ... with 1 more variable: unemployment_rate <dbl>
+
+We merged three data sets by variable year and month and the final data
+set contains all variables from three data sets. With this final data
+set, we can check the relation between politics (which party is
+dominant) and the economy of the society. However, since each data set
+has a different year range, there are many missing values in this final
+data set and we may need to clean those missing values for further
+analysis.
