--- a/p8105_hw2_zc2556.md
+++ b/p8105_hw2_zc2556.md
@@ -265,10 +265,9 @@ pols_month =
   janitor::clean_names() %>% #clean the name
   separate(mon, c("year", "month", "day")) %>%
   mutate(
-    month = month.abb[as.numeric(month)] #change month number to month names
+    month = month.name[as.numeric(month)] #change month number to month names
     ) %>%
   mutate(
-    prez_gop = ifelse(prez_gop == 0, 0, 1), #we have "2" in our dataset, and replace them to "1"
     president = prez_gop + prez_dem
   ) %>%
   select(
@@ -289,14 +288,14 @@ pols_month =
     ##   rep_dem = col_double()
     ## )
 
-We import the data set “pols\_month.csv”. Since we have “2”s in column
-prez\_gop, and, after checking with WIKI, the U.S president for that
-period is Ford, who is a republican, we replaced the “2” to “1” (1 for
-yes). We have variables containing the president, number of governors,
-senators and representatives in both parties, year and month. It’s
-dimension is 822X9; year range is 1947, 2015; the key variables are year
-and month, meaning that we can identify any observations with a combined
-year and month.
+We import the data set “pols\_month.csv”. Interestingly, we have the
+value “2” in “prez\_gop” during 1974 and it may because there was some
+special historical event and we decide to keep it here. We have
+variables containing the president, number of governors, senators and
+representatives in both parties, year and month. It’s dimension is
+822X9; year range is 1947, 2015; the key variables are year and month,
+meaning that we can identify any observations with a combined year and
+month.
 
 ``` r
 #Import and clean snp.csv
@@ -386,12 +385,12 @@ head(final_ds)
     ## # A tibble: 6 x 11
     ##   year  month gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president close
     ##   <chr> <chr>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>     <dbl> <dbl>
-    ## 1 1947  Jan        23      51     253      23      45     198         1    NA
-    ## 2 1947  Feb        23      51     253      23      45     198         1    NA
-    ## 3 1947  Mar        23      51     253      23      45     198         1    NA
-    ## 4 1947  Apr        23      51     253      23      45     198         1    NA
+    ## 1 1947  Janu~      23      51     253      23      45     198         1    NA
+    ## 2 1947  Febr~      23      51     253      23      45     198         1    NA
+    ## 3 1947  March      23      51     253      23      45     198         1    NA
+    ## 4 1947  April      23      51     253      23      45     198         1    NA
     ## 5 1947  May        23      51     253      23      45     198         1    NA
-    ## 6 1947  Jun        23      51     253      23      45     198         1    NA
+    ## 6 1947  June       23      51     253      23      45     198         1    NA
     ## # ... with 1 more variable: unemployment_rate <dbl>
 
 We merged three data sets by variable year and month and the final data
