--- a/p8105_hw2_zc2556.md
+++ b/p8105_hw2_zc2556.md
@@ -105,7 +105,7 @@ NYC_Transit =
   read_csv("./NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% #clean the name
   select(line, name = station_name, route1:route11, station_latitude, station_longitude, entrance_type , entry, vending, ada) %>% #select meaningful variables
-   mutate_at(vars(route1:route11), funs(as.character)) #convert to character for further cleaning
+  mutate_at(vars(route1:route11), funs(as.character)) #convert to character for further cleaning
 ```
 
     ## Parsed with column specification:
@@ -268,7 +268,7 @@ pols_month =
     month = month.name[as.numeric(month)] #change month number to month names
     ) %>%
   mutate(
-    president = prez_gop + prez_dem
+    president = ifelse(prez_gop == 0, "dem", "gop")
   ) %>%
   select(
     -prez_dem, -prez_gop, -day
@@ -289,13 +289,13 @@ pols_month =
     ## )
 
 We import the data set “pols\_month.csv”. Interestingly, we have the
-value “2” in “prez\_gop” during 1974 and it may because there was some
-special historical event and we decide to keep it here. We have
-variables containing the president, number of governors, senators and
-representatives in both parties, year and month. It’s dimension is
-822X9; year range is 1947, 2015; the key variables are year and month,
-meaning that we can identify any observations with a combined year and
-month.
+value “2” in “prez\_gop” during 1974 and it may because there was a
+special historical event and we decided to keep it here. We have
+variables containing the belonging party of the president, number of
+governors, senators and representatives in both parties, year and month.
+It’s dimension is 822X9; year range is 1947, 2015; the key variables are
+year and month, meaning that we can identify any observations with a
+combined year and month.
 
 ``` r
 #Import and clean snp.csv
@@ -384,13 +384,13 @@ head(final_ds)
 
     ## # A tibble: 6 x 11
     ##   year  month gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president close
-    ##   <chr> <chr>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>     <dbl> <dbl>
-    ## 1 1947  Janu~      23      51     253      23      45     198         1    NA
-    ## 2 1947  Febr~      23      51     253      23      45     198         1    NA
-    ## 3 1947  March      23      51     253      23      45     198         1    NA
-    ## 4 1947  April      23      51     253      23      45     198         1    NA
-    ## 5 1947  May        23      51     253      23      45     198         1    NA
-    ## 6 1947  June       23      51     253      23      45     198         1    NA
+    ##   <chr> <chr>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>     <dbl>
+    ## 1 1947  Janu~      23      51     253      23      45     198 dem          NA
+    ## 2 1947  Febr~      23      51     253      23      45     198 dem          NA
+    ## 3 1947  March      23      51     253      23      45     198 dem          NA
+    ## 4 1947  April      23      51     253      23      45     198 dem          NA
+    ## 5 1947  May        23      51     253      23      45     198 dem          NA
+    ## 6 1947  June       23      51     253      23      45     198 dem          NA
     ## # ... with 1 more variable: unemployment_rate <dbl>
 
 We merged three data sets by variable year and month and the final data
